[package]
name = "hello_world"
version = "0.1.0"
authors = ["calam1 <chrislam67@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
proxy-wasm = "0.1.3"
wasm-bindgen = "0.2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
